# fixed-decimal

./: CHANGELOG.md  LICENSE  README.md  fixed-decimal.cabal  stack.yaml
.github/workflows/: branch.yml  master.yml
benchmark/: Bench.hs
docs/haddock/: CHANGELOG.md  Data-Fixed-Decimal-Class.html  Data-Fixed-Decimal.html  README.md  doc-index.html  fixed-decimal.haddock  index.html
docs/macos-latest/: results.csv  results.html
docs/ubuntu-latest/: results.csv  results.html
docs/windows-latest/: results.csv  results.html
src/Data/Fixed/: Decimal.hs
src/Data/Fixed/Decimal/: Class.hs  Int128.hs  Int160.hs  Int192.hs  Int256.hs  Word128.hs  Word160.hs  Word192.hs  Word256.hs
src/Fixed/: Decimal.hs
test/: Main.hs  Spec.hs  Test.hs
test/Data/Fixed/Decimal/: Tests.hs
